# stackoverflow_q_calculating_rotation_obb

./: README.md  pyproject.toml  run.py
